<resources>
    <string name="app_name">ZETA</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_indext">IndextActivity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>

    <string name="main_warm_pressing">温压测量</string>
    <string name="main_single_valve">单阀调试</string>
    <string name="main_system">系统调试</string>
    <string name="main_setting">系统设置</string>
    <string name="back">返回</string>
    <string name="warm_pressing_title">流量测控平衡阀调节测试仪</string>
    <string name="copyright">Copyright by ZETA ®</string>

    <string name="debug_valve">调试阀门</string>
    <string name="confirm">确定</string>
    <string name="cancle">取消</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
</resources>
