<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.intohotel.fragment.WarmPressingFragment">

    <RelativeLayout
        android:id="@+id/status_bar_layout"
        style="@style/WidthFillStyle"
        android:layout_below="@id/warm_pressing_title_text"
        android:background="#efefed"
        android:padding="15dp">

        <include layout="@layout/view_status_bar" />
    </RelativeLayout>

    <ScrollView
        style="@style/FillParentStyle"
        android:layout_below="@id/status_bar_layout">

        <RelativeLayout style="@style/FillParentStyle">


            <LinearLayout
                android:id="@+id/vavle_setting_layout"
                style="@style/WidthFillStyle"
                android:orientation="horizontal"
                android:padding="10dp">

                <RelativeLayout
                    android:id="@+id/valve_type_layout"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1.0"
                    android:background="#0093dd">

                    <TextView
                        android:id="@+id/vavle_type_title_text"
                        style="@style/Text.MiddleFonts"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="阀门类型选择"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/vavle_type_text"
                        style="@style/Text.BigFonts"
                        android:layout_below="@id/vavle_type_title_text"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white"
                        android:hint="请选择阀门类型"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/valve_size_layout"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1.0"
                    android:background="#0093dd">

                    <TextView
                        android:id="@+id/vavle_size_title_text"
                        style="@style/Text.MiddleFonts"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="阀门口径选择"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/vavle_size_text"
                        style="@style/Text.BigFonts"
                        android:layout_below="@id/vavle_size_title_text"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white"
                        android:hint="请选择阀门口径"/>
                </RelativeLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/flow_setting_layout"
                style="@style/WidthFillStyle"
                android:layout_below="@id/vavle_setting_layout"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <RelativeLayout
                    android:id="@+id/valve_setting_ring_layout"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="#0093dd">

                    <TextView
                        android:id="@+id/ring_setting_title_text"
                        style="@style/Text.MiddleFonts"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="阀门当前读数"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/ring_setting_text"
                        style="@style/Text.BigFonts"
                        android:layout_below="@id/ring_setting_title_text"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white"
                        android:hint="请设置阀门当前读数"/>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/flow_layout"
                style="@style/WidthFillStyle"
                android:layout_below="@id/flow_setting_layout"
                android:orientation="horizontal"
                android:padding="10dp">

                <RelativeLayout
                    android:id="@+id/show_flow_layout"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1.0"
                    android:background="#3bb3c3">

                    <TextView
                        android:id="@+id/show_flow_title_text"
                        style="@style/Text.MiddleFonts"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="显示流量"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/show_flow_text"
                        style="@style/Text.BigFonts"
                        android:layout_below="@id/show_flow_title_text"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:text="4.8 m³/h"
                        android:textColor="@color/white" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/pressure_diff_layout"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1.0"
                    android:background="#e3556b">

                    <TextView
                        android:id="@+id/pressure_diff_title_text"
                        style="@style/Text.MiddleFonts"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="压差"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/pressure_diff_text"
                        style="@style/Text.BigFonts"
                        android:layout_below="@id/pressure_diff_title_text"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:text="2.2kPa"
                        android:textColor="@color/white" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/valve_setting_show_flow_layout"
                style="@style/WidthFillStyle"
                android:layout_below="@id/flow_layout"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:visibility="gone">

                <RelativeLayout
                    android:id="@+id/valve_setting_flow_layout"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1.0"
                    android:background="#0093dd">

                    <TextView
                        android:id="@+id/flow_setting_title_text"
                        style="@style/Text.MiddleFonts"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="目标流量设置"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/flow_setting_text"
                        style="@style/Text.BigFonts"
                        android:layout_below="@id/flow_setting_title_text"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white"
                        android:hint="请设置目标流量"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/advice_ring_layout"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1.0"
                    android:background="#e3556b">

                    <TextView
                        android:id="@+id/advice_ring_title_text"
                        style="@style/Text.MiddleFonts"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="建议圈数"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/advice_ring_text"
                        style="@style/Text.BigFonts"
                        android:layout_below="@id/advice_ring_title_text"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:text="\? 圈"
                        android:textColor="@color/white" />
                </RelativeLayout>
            </LinearLayout>

            <!-- 调试信息-->
            <RelativeLayout
                android:id="@+id/debug_valve_layout"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_below="@id/valve_setting_show_flow_layout"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                >

                <TextView
                    style="@style/Text.MiddleFonts"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="left|top"
                    android:text="调试阀门前，请先正确选择阀门类型，阀门口径，并设置阀门当前读数。"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/debug_valve_btn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:background="#d8261c"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/debug_valve"
                    android:textColor="@color/white"
                    android:textSize="20dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/debug_valve_layout1"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_below="@id/valve_setting_show_flow_layout"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#9a9997"
                android:visibility="gone">

                <TextView
                    android:id="@+id/debug_valve_text1"
                    style="@style/Text.MiddleFonts"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="left|top"
                    android:textColor="@color/white" />

                <LinearLayout
                    style="@style/WidthFillStyle"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/debug_valve_confirm_btn"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="5dp"
                        android:layout_weight="1.0"
                        android:background="#d8261c"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/confirm"
                        android:textColor="@color/white"
                        android:textSize="20dp" />

                    <Button
                        android:id="@+id/debug_valve_cancle_btn"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="5dp"
                        android:layout_weight="1.0"
                        android:background="#716f62"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/cancle"
                        android:textColor="@color/white"
                        android:textSize="20dp" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/debug_valve_layout2"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_below="@id/valve_setting_show_flow_layout"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#9a9997"
                android:visibility="gone">

                <TextView
                    android:id="@+id/debug_valve_text2"
                    style="@style/Text.MiddleFonts"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="left|top"
                    android:text="将阀门关闭，点击确定。之后会计算得到阀门打开的建议圈数。旋转阀门到建议开度，并观察显示流量变化。"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/debug_valve_confirm_btn2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:background="#d8261c"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/confirm"
                    android:textColor="@color/white"
                    android:textSize="20dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/debug_valve_layout3"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_below="@id/valve_setting_show_flow_layout"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/debug_valve_text3"
                    style="@style/Text.MiddleFonts"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="left|top"
                    android:textColor="@color/black" />

                <LinearLayout
                    style="@style/WidthFillStyle"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/debug_valve_confirm_btn3"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="5dp"
                        android:layout_weight="1.0"
                        android:background="#dc214c"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="继续优化"
                        android:textColor="@color/white"
                        android:textSize="20dp" />

                    <Button
                        android:id="@+id/debug_valve_cancle_btn3"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="5dp"
                        android:layout_weight="1.0"
                        android:background="#716f62"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="返回"
                        android:textColor="@color/white"
                        android:textSize="20dp" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
